# ProxyFire

./: .gitignore  CMakeLists.txt  LICENSE  README.md  proxyfire.toml.example
.github/workflows/: ci.yml
include/proxyfire/: common.h  config.h  ipc_protocol.h  proxy_types.h
src/common/: CMakeLists.txt  ipc_messages.cpp  ipc_messages.h  proxy_uri.cpp  proxy_uri.h  string_utils.cpp  string_utils.h
src/hookdll/: CMakeLists.txt  dllmain.cpp  dns_faker.cpp  dns_faker.h  hook_dns.cpp  hook_dns.h  hook_installer.cpp  hook_installer.h  hook_process.cpp  hook_process.h  hook_udp.cpp  hook_udp.h  hook_winhttp.cpp  hook_winhttp.h  hook_winsock.cpp  hook_winsock.h  ipc_client.cpp  ipc_client.h  proxy_chain.cpp  proxy_chain.h  proxy_connector.cpp  proxy_connector.h  socket_context.cpp  socket_context.h  udp_relay.cpp  udp_relay.h
src/launcher/: CMakeLists.txt  cli_parser.cpp  cli_parser.h  config_loader.cpp  config_loader.h  injector.cpp  injector.h  ipc_server.cpp  ipc_server.h  logger.cpp  logger.h  main.cpp  process_launcher.cpp  process_launcher.h
